# lector

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.example.yml  pyproject.toml
app/: __init__.py  config.py  db.py  detection.py  events.py  fileops.py  girocode.py  main.py  models.py  pages.py  paperless.py  paperless_sync.py  pdfbuilder.py  pipeline.py  preprocessing.py  recipient_llm.py  repository.py  retention.py  sevdesk.py  watcher.py  worker.py
app/ocr/: __init__.py  base.py  documentai.py
app/static/: app.css  app.js
app/templates/: base.html  dashboard.html  detail.html  invoice_detail.html  invoices.html  recipients.html
app/templates/partials/: detail_body.html  history_rows.html  invoice_detail_body.html  invoice_rows.html  recipient_rows.html
feature-documentation/: README.md  bildvorverarbeitung.md  datenhaltung.md  docker-deployment.md  format-erkennung-erechnung.md  konfiguration.md  ocr-adapter.md  pipeline-lifecycle-retry.md  retention.md  sandwich-pdf.md  watch-folder.md  web-ui-sse.md
feature-documentation/paperless-integration/: README.md  empfaenger-zuordnung.md  girocode.md  paperless-client.md  rechnungs-ui.md  sevdesk-export.md  sync-und-aktionen.md
prd/: PRD_Lector.md  PROGRESS.md  token-log.csv
scripts/: diag_rotation.py
tests/: test_detection.py  test_girocode.py  test_invoices_repo.py  test_ocr.py  test_pdfbuilder.py  test_pipeline.py  test_preprocessing.py  test_recipients.py  test_repository.py  test_watcher.py  test_web.py
