[project]
name = "lector"
version = "0.1.0"
description = "Veredelt eingehende Dokumente per Cloud-OCR zu durchsuchbaren Sandwich-PDFs für Paperless-ngx"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "watchdog>=5.0",
    "opencv-python-headless>=4.10",
    "pillow>=11.0",
    "numpy>=2.1",
    "pypdf>=5.1",
    "pikepdf>=9.4",
    "pypdfium2>=4.30",
    "reportlab>=4.2",
    "google-cloud-documentai>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
